# virtual-hom-example

./: .gitignore  LICENSE  README.md  index.html  stack.yaml  virtual-hom-example.cabal
src/: Main.hs
