name:                virtual-hom-example
version:             0.1.0.0
synopsis:            Self-contained example app for virtual-hom
description:         Please see README.md
homepage:            http://github.com/j-mueller/virtual-hom-example
license:             BSD3
license-file:        LICENSE
author:              Jann Müller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2016 Jann Müller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

homepage: https://github.com/j-mueller/virtual-hom-example
bug-reports: https://github.com/j-mueller/virtual-hom-example/issues

executable virtual-hom-example
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:
      base >= 4.7 && < 5
    , virtual-hom
    , lens >= 4.6 && < 5
    , text >= 1.2 && < 1.3
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/j-mueller/virtual-hom-example
